# LineCut

./: .gitignore  AGENTS.md  README.md  THIRD_PARTY_NOTICES.md  index.html  package-lock.json  package.json  需求.md
docs/: error-system.md  system-architecture.md  windows-thumbnail-provider.md
scripts/: build-thumbnail-provider.mjs  check-error-boundaries.mjs  check-system-architecture.mjs  prepare-transnetv2-assets.mjs  release.mjs
src/: App.tsx  appEvents.ts  appPanelRegistry.ts  disable-browser-behaviors.ts  errorReporting.ts  ffmpegProgress.ts  main.tsx  mediaImportTask.ts  panelState.tsx  projectHistory.ts  store.ts  storyboardThumbnail.ts  styles.css  subtitleThumbnail.ts  thumbnail.ts  time.ts  timeline.ts  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/transnetv2/: README.md
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/backend/: commands.rs  export.rs  media.rs  mod.rs  native_drag_drop.rs  proxy.rs  storage.rs  storyboard.rs  subtitles.rs  tasks.rs  thumbnail.rs  workspace.rs
src-tauri/src/project_file/: README.md  auto_save.rs  handle_v1.rs  io.rs  keyring.rs  mod.rs  protocol.rs
src-tauri/src/project_file/models/: mod.rs  v2.rs
src-tauri/thumbnail-provider/: Cargo.toml  build.rs
src-tauri/thumbnail-provider/src/: lib.rs
src-tauri/windows/: ffmpeg-options.nsh  installer.nsi
src/components/ApplicationMenu/: ApplicationMenu.css  ApplicationMenu.tsx  index.ts
src/components/DockLayout/: DockLayout.css  DockLayout.tsx  PanelManager.tsx  PanelRegistry.tsx  index.ts  types.ts
src/components/ExportPanel/: ExportPanel.css  ExportPanel.tsx  exportPanelState.ts  index.ts  panelDefinition.tsx
src/components/HistoryPanel/: HistoryPanel.css  HistoryPanel.tsx  index.ts  panelDefinition.tsx
src/components/ImportWorkspace/: ImportWorkspace.css  ImportWorkspace.tsx  index.ts
src/components/MediaBin/: MediaBin.css  MediaBin.tsx  MediaBinTable.tsx  MediaBinVideoThumbnail.tsx  index.ts  mediaBinState.ts  mediaDrag.ts  panelDefinition.tsx  panelTypes.ts
src/components/MediaLinkDialog/: MediaLinkDialog.css  MediaLinkDialog.tsx  index.ts
src/components/ModalDialog/: ModalDialog.css  ModalDialog.tsx
src/components/PopupMenu/: PopupMenu.css  PopupMenu.tsx
src/components/PreferencesDialog/: PreferencesDialog.tsx
src/components/ProxyCreationDialog/: ProxyCreationDialog.css  ProxyCreationDialog.tsx  index.ts
src/components/SecondaryTopbar/: SecondaryTopbar.css  SecondaryTopbar.tsx  index.ts
src/components/SelectDropdown/: SelectDropdown.css  SelectDropdown.tsx
src/components/SourceMonitor/: MonitorRange.tsx  SourceMonitor.css  SourceMonitor.tsx  TimelineRuler.tsx  VideoControls.tsx  VideoDisplay.tsx  index.ts  panelDefinition.tsx  sourceMonitorState.ts  useProxyController.ts
src/components/StoryboardPanel/: StoryboardPanel.css  StoryboardPanel.tsx  index.ts  panelDefinition.tsx  storyboardPanelState.ts
src/components/SubtitlePanel/: SubtitlePanel.css  SubtitlePanel.tsx  index.ts  panelDefinition.tsx  subtitlePanelState.ts
src/components/TaskProgress/: TaskProgress.css  TaskProgress.tsx  index.ts
src/components/WorkspaceSwitcher/: WorkspaceSwitcher.css  WorkspaceSwitcher.tsx  index.ts
src/errors/: ErrorUI.tsx  index.ts  model.ts  runtime.ts
src/runtime/: immutable.ts
src/runtime/capabilities/: EditCapability.ts  PlaybackCapability.ts
src/runtime/events/: EventHub.ts  contracts.ts  react.ts
src/runtime/state/: StateHub.ts  contracts.ts  react.ts
src/runtime/systems/: PanelState.tsx  identity.ts
(+5 files in other folders)
