[package]
name = "linecut"
version = "0.2.0-alpha.1"
description = "Subtitle indexed clip export tool"
authors = ["Kotodama"]
license = "Apache-2.0"
repository = ""
edition = "2021"
rust-version = "1.77"

[lib]
name = "linecut_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
bincode = "1"
encoding_rs = "0.8"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
time = "=0.3.44"
tokio = { version = "1", features = ["process", "io-util", "time"] }
uuid = { version = "1", features = ["v4", "serde"] }
