[package]
name = "linecut"
version = "0.2.0-alpha.3"
description = "Subtitle indexed clip export tool"
authors = ["Kotodama"]
license = "Apache-2.0"
repository = ""
edition = "2021"
rust-version = "1.77"

[lib]
name = "linecut_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
sha2 = "0.10"
tauri-build = { version = "2", features = [] }

[dependencies]
bincode = "1"
chacha20poly1305 = "=0.10.1"
encoding_rs = "0.8"
getrandom = "=0.2.16"
hkdf = "=0.12.4"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
time = "=0.3.44"
tokio = { version = "1", features = ["process", "io-util", "time"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
uuid = { version = "1", features = ["v4", "serde"] }
zeroize = "=1.8.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_Ole",
  "Win32_System_SystemServices",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
] }
windows-core = "0.61"
