[package]
name = "linecut_thumbnail_provider"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_Graphics_Imaging",
  "Win32_System_Com",
  "Win32_UI_Shell",
  "Win32_UI_Shell_PropertiesSystem",
] }
windows-core = "0.61"
